iteration 2 and 3 done

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,6 +8,12 @@
     <title>{{title}}</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
+<nav>
+
+<a href="/drones">Lista de drones</a>
+<a href="/drones/create">Crea un dron</a>
+
+</nav>
 
   <body>
 
