--- a/views/drones/create-form.hbs
+++ b/views/drones/create-form.hbs
@@ -1,1 +1,16 @@
 <h2>Create a new drone</h2>
+
+<form action="/drones/create" method="post">
+
+<label for="name">Name</label>
+<input type="text" name="name">
+
+<label for="propellers">Propellers</label>
+<input type="text" name="propellers">
+
+<label for="maxSpeed">maxSpeed</label>
+<input type="text" name="maxSpeed">
+
+    <button>Crear</button>
+
+</form>
