--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -1,1 +1,8 @@
 <h2>Available drones</h2>
+{{#each this.allDrones}}
+
+<h3>{{this.name}}</h3>
+<p>{{this.propellers}}</p>
+<p>{{this.maxSpeed}}</p>
+
+{{/each}}
