--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -1,8 +1,19 @@
 <h2>Available drones</h2>
 {{#each this.allDrones}}
 
-<h3>{{this.name}}</h3>
-<p>{{this.propellers}}</p>
-<p>{{this.maxSpeed}}</p>
+
+  <h3>{{this.name}}</h3>
+
+  <p>{{this.propellers}}</p>
+  <p>{{this.maxSpeed}}</p>
+
+  <a href="/drones/{{this._id}}/edit">
+  <button>Editar drone</button>
+  </a>
+
+  <form action="/drones/{{this._id}}/delete" method="post">
+  <button>Eliminar drone</button>
+  </form>
+
 
 {{/each}}
