--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,7 +8,7 @@
     <title>{{title}}</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
-<nav>
+<nav id="nav">
 
 <a href="/drones">Lista de drones</a>
 <a href="/drones/create">Crea un dron</a>
