--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,58 @@
 body {
-  padding: 50px;
+  background-image: url("../images/flying-drone.avif");
   font: 14px 'Lucida Grande', Helvetica, Arial, sans-serif;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
 }
 
-a {
+/* a {
   color: #00b7ff;
+} */
+
+#nav {
+  background-color: orange;
+  height: 4em;
+  align-items: center;
+  display: flex;
+  position: sticky;
+  justify-content: left;
+  font-size: 1.2em;
+  
+}
+#nav a{
+  text-decoration: none;
+  color: white;
+  padding-right: 50px;
+  padding-left: 10px;
+}
+.square {
+  border-style: solid;
+  border-width: 3px;
+  border-radius: 2em;
+  border-color: white;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 25%;
+  padding-top:20px ;
+  padding-bottom: 40px;
+  margin: 20px;
+ text-align: center;
+}
+#container {
+  justify-content: space-evenly;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  color: white;
+  text-shadow: 2px 2px black;
+  
+}
+.btn {
+  background-color: orange;
+  color: white;
+  border-radius: 3em;
+  padding: 5px 8px 5px 8px;
+  margin-bottom: 3px;
 }
